# Memory-Archive

./: .gitignore  CHANGELOG.md  Cargo.toml  Cross.toml  README.md  pyrightconfig.json
.github/workflows/: release.yml
install/: install.ps1  install.sh
ma-app/: pyproject.toml
ma-app/ma_app/: cli.py  updater.py
ma-app/ma_app/compiler/: finalizer.py  scaffolder.py
ma-app/ma_app/config/: settings.py
ma-app/ma_app/ipc/: client.py
ma-app/ma_app/model/: __init__.py  backend.py  generic.py  internal_model.py  pipeline.py  pricing.py  rate_limiter.py  router.py  secrets.py
ma-app/ma_app/session/: register.py
ma-app/ma_app/storage/: __init__.py  aws.py  azure.py  fetch.py  gcp.py  remote_fetch.py  sync_log.py  sync_worker.py
ma-app/ma_app/tui/: app.py  reasoning_writer.py  session_loader.py
ma-app/ma_app/tui/screens/: annotation.py  compiler.py  help_overlay.py
ma-app/ma_app/tui/widgets/: image_review.py  reasoning_editor.py  stats_pane.py  step_list.py
ma-app/tests/: test_scaffolder.py
ma-core/: Cargo.toml
ma-core/src/: annotator_management.rs  main.rs  tls.rs
ma-core/src/capture/: disconnect.rs  mod.rs  session_state.rs  stream.rs  writer.rs
ma-core/src/config/: mod.rs
ma-core/src/convert/: mod.rs
ma-core/src/ipc/: messages.rs  mod.rs
ma-core/src/kafka/: consumer.rs  envelope.rs  mod.rs
ma-core/src/observability/: mod.rs
ma-core/src/registry/: mod.rs  schema.rs
ma-core/src/session/: metadata.rs  mod.rs  reasoning.rs
ma-core/src/storage/: mod.rs  router.rs
ma-core/src/vision/: client.rs  marker.rs  mod.rs
ma-kafka-producer/: Cargo.toml
ma-kafka-producer/src/: main.rs
ma-proto/: Cargo.toml  build.rs
ma-proto/proto/: control_center.proto
ma-proto/src/: lib.rs
