[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ma-app"
version = "0.11.0"
description = "Memory Archive — Python layer (TUI, CLI, cloud storage, memory compilation)"
requires-python = ">=3.11"

dependencies = [
    # CLI framework
    "typer>=0.12",

    # TUI framework
    "textual>=0.59",

    # Rich terminal output (used by CLI for prompts, tables, status messages)
    "rich>=13",

    # Image manipulation — required for pan (crop before chafa/Kitty render)
    "pillow>=10",

    # Cloud storage integrations
    "boto3>=1.34",                         # AWS S3
    "azure-storage-blob>=12.19",           # Azure Blob Storage
    "azure-identity>=1.15.0",              # Azure Identity
    "azure-storage-file-datalake>=12.14.0",  # Azure ADLS Gen 2
    "azure-storage-file-share>=12.16.0",     # Azure File Share
    "google-cloud-storage>=2.14",            # GCP Cloud Storage
    "httpx>=0.27",                           # VLM API HTTP client (sync + async)
    "cryptography>=41",                      # Ed25519 signature verification for pricing manifest
]

[project.scripts]
# Installs the `memory-archive` command globally after `pip install -e .`
memory-archive = "ma_app.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["ma_app"]

[tool.pyright]
pythonVersion = "3.11"
# Tells Pylance that ma-app/ is the package root, so ma_app.* imports resolve.
# pyproject.toml lives in ma-app/, so "." points to ma-app/ itself.
extraPaths = ["."]