[package]
name = "ma-proto"
description = "Generated protobuf types for Memory Archive — Control-Center CommandEvent and related messages"
version.workspace = true
edition.workspace = true

[dependencies]
prost.workspace = true
prost-types.workspace = true
serde.workspace = true
serde_json.workspace = true
tonic.workspace = true

[build-dependencies]
tonic-build = "0.12"